--- a/NorthWind.IoC/NorthWind.IoC.csproj
+++ b/NorthWind.IoC/NorthWind.IoC.csproj
@@ -1,19 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NorthWind.Entities\NorthWind.Entities.csproj" />
-    <ProjectReference Include="..\NorthWind.IoC\NorthWind.IoC.csproj" />
     <ProjectReference Include="..\NorthWind.Writers\NorthWind.Writers.csproj" />
   </ItemGroup>
 
